# omniwa

./: .dockerignore  .gitignore  .prettierignore  AGENTS.md  CLAUDE.md  Cargo.toml  IMPLEMENTATION_PLAN_VERTICAL_SLICE_01.md  IMPLEMENTATION_PLAN_VERTICAL_SLICE_02.md  LICENSE  README.md  VERTICAL_SLICE_01_COMPLETION_REPORT.md  VERTICAL_SLICE_02_COMPLETION_REPORT.md  VERTICAL_SLICE_02_LIVE_DEMO_CHECKLIST.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.mjs  tsconfig.base.json  tsconfig.package.json  tsconfig.references.json  vitest.config.ts
.github/workflows/: quality-gate.yml
.omniwa/: README.md  SKILL_MAPPING.md
.omniwa/context/: api.md  application.md  architecture.md  domain.md  infrastructure.md  persistence.md
.omniwa/playbooks/: bootstrap.md  hotfix.md  implement-module.md  refactor.md  release.md  (+1 more)
apps/: README.md
docs/: DECISIONS.md  FREEZE_PHASE_0.md  GLOSSARY.md  IMPLEMENTATION_STATUS.md  NON_FUNCTIONAL_REQUIREMENTS.md  OPEN_QUESTIONS.md  PHASE1_HANDOFF.md  PHASE2_HANDOFF.md  PHASE3_HANDOFF.md  PHASE4_HANDOFF.md  PHASE5_HANDOFF.md  PHASE6_HANDOFF.md  PHASE7_HANDOFF.md  PRODUCT_SCOPE.md  PROJECT_CONVENTIONS.md  README.md  RISKS.md  ROADMAP.md  SUCCESS_METRICS.md  VISION.md
scripts/: README.md
sdks/rust/omniwa-sdk/: Cargo.toml  README.md
sdks/rust/omniwa-sdk/src/: auth.rs  client.rs  idempotency.rs  streaming.rs  transport.rs
sdks/rust/omniwa-sdk/src/resources/: chats.rs  health.rs  instances.rs  labels.rs  mod.rs  webhooks.rs
sdks/rust/omniwa-sdk/tests/: fixture_client.rs
tooling/: README.md
(+494 files in other folders)
