[package]
name = "omniwa-sdk"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Official Rust SDK foundation for the OmniWA public REST API."
repository = "https://github.com/hiepknor/omniwa"
readme = "README.md"
publish = false

[lib]
name = "omniwa_sdk"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = "2.12"
